--- a/AWComp/src/Components/BorderDisplay/BorderComp/Border004/Border004.css
+++ b/AWComp/src/Components/BorderDisplay/BorderComp/Border004/Border004.css
@@ -1,13 +1,19 @@
 .Border004 {
-  overflow: hidden;
   position: relative;
   width: 80%;
   height: 80%;
+  border-top: 1px solid rgb(251, 255, 0);
+  border-right: 1px solid rgb(0, 255, 255);
+  border-bottom: 1px solid rgb(255, 255, 255);
+  border-left: 1px solid rgb(255, 0, 132);
   & span {
     position: absolute;
     border-radius: 100vmax;
-  }
+  } 
 }
+
+
+
 
 .top {
   top: 0;
