--- a/AWComp/src/index.css
+++ b/AWComp/src/index.css
@@ -1,9 +1,8 @@
 :root {
-  background-image: url('./bg.svg');
+  background-color: #242424;
+  background-image: url('bg.svg');
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 
