--- a/AWComp/src/index.css
+++ b/AWComp/src/index.css
@@ -1,6 +1,6 @@
 :root {
   background-color: #242424;
-  background-image: url('bg.svg');
+  background-image: url('./public/bg.svg');
   font-synthesis: none;
   text-rendering: optimizeLegibility;
 }
